# flood-vfs-service

./: .env  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: general.yml
.github/workflows/: docker-image.yml  general.yml  publish-binaries.yml
scripts/: cargo-cross-on-mac.sh
src/: config.rs  logger.rs  main.rs  middleware.rs  torrents.rs
