[package]
name = "flood-vfs-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.51"
thiserror = "1.0.32"
bb8 = "0.8.0"
lru = "0.10.0"
md5 = "0.7.0"
serde-enum-str = "0.3.2"

tracing = "0.1.31"
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3.5"
task-local-extensions = "0.1.4"
opentelemetry = "0.18.0"
reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }

reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
reqwest-tracing = { version = "0.4.1", features = ["tracing-opentelemetry_0_18_pkg"] }
