[package]
name = "flood-vfs-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
tokio = { version = "1.27.0", features = ["full"] }
anyhow = "1.0.51"
thiserror = "1.0.32"
bb8 = "0.8.0"
lru = "0.10.0"
md5 = "0.7.0"
serde-enum-str = "0.3.2"

task-local-extensions = "0.1.4"
reqwest = { version = "0.11.17", features = [ "json", "cookies"] }
log4rs = "1.2.0"
log = "0.4.17"
async-trait = "0.1.68"
reqwest-middleware = "0.1.6"
dotenv = "0.15.0"
colored = "2.0.0"
env_logger = "0.10.0"
chrono = "0.4.24"
structopt = "0.3.26"
